Changes from Friday. Will document better from here on
git-svn-id: file://localhost/Users/Andrew/Desktop/cvs/svn-repos/api@5 62ca7add-fdcc-42f9-ad68-dd72f3994b3d

--- a/api.css
+++ b/api.css
@@ -1,5 +1,8 @@
-td.success{
-border:1px solid green;
+td.success,td.enabled{
+border:1px solid #00CF6A;
+}
+td.neutral{
+border:1px solid orange;
 }
 td.error{
 border:1px solid red;
