Table authentication panel finished. Some refactoring done to separate backend/frontend.
git-svn-id: file://localhost/Users/Andrew/Desktop/cvs/svn-repos/api@7 62ca7add-fdcc-42f9-ad68-dd72f3994b3d

--- a/api.css
+++ b/api.css
@@ -1,9 +1,13 @@
-td.success,td.enabled{
+.success,.enabled{
 border:1px solid #00CF6A;
 }
-td.neutral{
+.neutral,.notenabled{
 border:1px solid orange;
 }
-td.error{
+.disabled
+{
+border:1px solid grey;
+}
+.error{
 border:1px solid red;
 }
