--- a/api.css
+++ b/api.css
@@ -1,3 +1,8 @@
+/*
+ * API plugin for Wolf CMS
+ * November 2009
+ * @author Ian Dundas for Band-x.org
+ */
 .success,.enabled{
 border:1px solid #00CF6A;
 }
